added contact and about

--- a/home.html
+++ b/home.html
@@ -32,12 +32,17 @@
     <div class="col-8">
         <div class="col">
             <ul id="portfolio-text">
-                <li id="portfolio1"></li>
-                <li id="portfolio2"></li>
-                <li id="portfolio3"></li>
-                <li id="portfolio4"></li>
-                <li id="portfolio5"></li>
+                <li><a id="portfolio1"></a></li>
+                <li><a id="portfolio2"></a></li>
+                <li><a id="portfolio3"></a></li>
+                <li><a id="portfolio4"></a></li>
+                <li><a id="portfolio5"></a></li>
             </ul>
+
+            <h1 id="about-me"></h1>
+
+            <h1 id="contact-me"></h1>
+
         </div>
     </div>
 </div>
@@ -51,7 +56,8 @@
         </button>
     </div>
     <div class="col-8">
-        <h1>ABOUT ME</h1>
+        <!-- <h1>ABOUT ME</h1> -->
+        <!-- Created dynamically in JS -->
     </div>
 </div>
 
@@ -64,7 +70,8 @@
         </button>
     </div>
     <div class="col-8">
-        <h1>CONTACT</h1>
+        <!-- <h1>CONTACT</h1> -->
+        <!-- Created dynamically in JS -->
     </div>
 </div>
 
