--- a/home.html
+++ b/home.html
@@ -17,11 +17,11 @@
     <link rel="stylesheet" href="./assets/css/homestyle.css">
 
 </head>
-<body>
+<body id="body">
 
 
 
-<div class="container">
+<div class="container" id="container">
     
 <div class="row">
     <div class="col-4">
@@ -81,7 +81,12 @@
 
 
 
+<!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js" 
+integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" 
+crossorigin="anonymous">
+</script>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
 
     <script src="./assets/js/homescript.js"></script>
     
