fixed js hide functions

--- a/home.html
+++ b/home.html
@@ -36,13 +36,19 @@
     </div>
     <div class="col-8">
         <div class="col">
-            <div id="portfolio-text">
-                <img><a id="portfolio1"></a></img>
-                <img><a id="portfolio2"></a></img>
-                <img><a id="portfolio3"></a></img>
-                <img><a id="portfolio4"></a></img>
-                <img><a id="portfolio5"></a></img>
-                <img><a id="portfolio6"></a></img>
+            <div class= "hide-portfolio" id="portfolio-text">
+                <a href="https://lmp-beep.github.io/03-PasswordGenerator/" target="_blank">
+                    <img src="./assets/images/PasswordGenerator.png" id="portfolio1"></a>
+                <a href="https://lmp-beep.github.io/04-CodeQuiz/" target="_blank">
+                    <img src="./assets/images/CodeQuiz.png" id="portfolio2"></a>
+                <a href="https://lmp-beep.github.io/05-DayPlanner/" target="_blank">
+                    <img src="./assets/images/DayPlanner.png" id="portfolio3"></a>
+                <a href="https://lmp-beep.github.io/06-WeatherDashboard/" target="_blank">
+                    <img src="./assets/images/WeatherDashboard.png" id="portfolio4"></a>
+                <a href="https://xr7tsi.github.io/News-Flash/" target="_blank">
+                    <img src="./assets/images/NewsFlash.png" id="portfolio5"></a>
+                <a href="">
+                    <img src="./assets/images/Placeholder.png" id="portfolio6"></a>
             </div>
 
             <h1 id="about-me"></h1>
