--- a/home.html
+++ b/home.html
@@ -111,13 +111,20 @@
         <!-- Created dynamically in JS -->
     </div>
 </div>
-
+<br><br>
+<br><br>
 </div> 
 
 
   
 
-
+<footer class="footer" id="footer">
+    <div class="navbar">
+        <a href="https://www.linkedin.com/in/lisa-pessin-7033b8203/" target="_blank" class="footer-text" id="linkedin">LINKEDIN</a>
+        <a href="https://github.com/lmp-beep" target="_blank" class="footer-text" id="github">GITHUB</a>
+        <a class="footer-text" id="copyright">COPYRIGHT © LISA PESSIN 2021</a>
+    </div>
+</footer>
   
 
 
