--- a/home.html
+++ b/home.html
@@ -71,7 +71,21 @@
                 </div>
 
 
+                <!-- About Me section -->
+                <div class="about-me" id="about-me">
+                    <img id="frame-photo">
+                    <p id="about-me-text"></p>
+
+                    <!-- <img src="assets/images/frame.png" id="frame-photo" class= "hide-about-me">
                     <h1 id="about-me"></h1>
+                    <p class= "hide-about-me" id="about-me-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis incidunt fugiat inventore fuga in dolor, similique deserunt voluptatum molestias vitae consectetur, exercitationem voluptatem ab tempora quos necessitatibus nulla beatae doloremque!
+
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab totam nobis sint exercitationem repudiandae, nisi at aperiam fugit quam nulla eum eius minus obcaecati minima. Eligendi nisi eos dolores eum.
+                    </p> -->
+
+                </div>
+
 
 
                     <h1 id="contact-me"></h1>
@@ -113,7 +127,9 @@
         </footer>
           
 
-
+<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+        
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 <script src="https://use.fontawesome.com/18004f3ee2.js"></script>
 
