added portfolio pages

--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
 
     
    
-    <script src="assets/js/script.js"></script>
+    <script src="https://use.fontawesome.com/18004f3ee2.js"></script>
+
+    <script src="./assets/js/homescript.js"></script>
 
 </body>
 </html>
