--- a/html/atlVA.html
+++ b/html/atlVA.html
@@ -28,7 +28,7 @@
           <div class="navbar">
             <ul>
               <a class="navbar" id="portfolio" href="../home.html#Portfolio">PORTFOLIO</a>
-              <a class="navbar" id="about" href="../home.html#About">ABOUT ME</a>
+              <a class="navbar" id="about" href="../home.html#About">ABOUT</a>
               <a class="navbar" id="contact" href="../home.html#Contact">CONTACT</a>
             </ul>
           </div>
@@ -39,7 +39,9 @@
               <a href="https://github.com/lmp-beep" target="blank"><img id="github" src="../assets/images/github.svg"></a>
               <a href="https://www.linkedin.com/in/lisa-pessin/" target="blank"><img id="linkedin" src="../assets/images/linkedin.svg"></a>
               <a href="https://lmp-beep.github.io/PhotographyPortfolio/" target="blank"><img id="photo" src="../assets/images/camera-fill.svg"></a>
-              <a href="#Contact"><img id="envelope" src="../assets/images/envelope-fill.svg"></a>
+              <a href="../html/myPhotos.html"><img id="right-arrow" src="../assets/images/chevron-right.svg"></a>
+              <a href=""><img id="left-arrow" src="../assets/images/chevron-left.svg"></a>
+              <a href="../home.html"><img id="grid" src="../assets/images/grid-3x3-gap-fill.svg"></a>
         </div>
 
 
@@ -47,7 +49,12 @@
 
       <div class="jumbotron jumbotron-fluid">
         <div class="container">
-          <!-- <img src="../assets/images/portfolio/ExteriorBackHorizontal-WebSize.jpg">  -->
+          <style>
+            .jumbotron {
+              background-image: url(../assets/images/portfolio/ExteriorBackHorizontal-WebSize.jpg);
+              background-size: cover;
+            }
+          </style>
         </div>
       </div>
 
