--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
       <div class="navbar">
         <ul>
           <a class="navbar" id="portfolio" href="#Portfolio">PORTFOLIO</a>
-          <a class="navbar" id="about" href="#About">ABOUT ME</a>
+          <a class="navbar" id="about" href="#About">ABOUT</a>
           <a class="navbar" id="contact" href="#Contact">CONTACT</a>
         </ul>
       </div>
@@ -40,10 +40,6 @@
           <a href="https://github.com/lmp-beep" target="blank"><img id="github" src="assets/images/github.svg"></a>
           <a href="https://www.linkedin.com/in/lisa-pessin/" target="blank"><img id="linkedin" src="assets/images/linkedin.svg"></a>
           <a href="https://lmp-beep.github.io/PhotographyPortfolio/" target="blank"><img id="photo" src="assets/images/camera-fill.svg"></a>
-
-          <a href="#Contact"><img id="envelope" src="assets/images/envelope-fill.svg"></a>
-          
-          <!-- <a href="#top"><img id="up-arrow" src="assets/images/level-up-alt-solid.svg"></a> -->
     </div>
     
 
@@ -55,7 +51,7 @@
     <div class="container-fluid">
       <div class="row hide-portfolio">
         <div class="portfolio col-sm-6 col-md-4">
-          <a href="html/atlVA.html"><img src="assets/images/portfolio/VAportfolio.png" class="inner" id="va-sharepoint"></img></a>
+          <a href="html/atlVA.html"><img src="./assets/images/portfolio/ExteriorFrontVertical-WebSize.png" class="inner" id="va-sharepoint"></img></a>
         </div>
         <div class="portfolio col-sm-6 col-md-4">
           <a href="/html/myPhotos.html"><img src="assets/images/portfolio/myPhotos.png" class="inner" id="my-photos"></img></a>
