--- a/html/myPhotos.html
+++ b/html/myPhotos.html
@@ -24,7 +24,7 @@
     
     <header>
         <div class="row">
-          <img class="myLogo" src="../assets/images/LPlogo.png">
+          <a href="../index.html"><img class="myLogo" src="../assets/images/LPlogo.png"></a>
           <div class="navbar">
             <ul>
               <a class="navbar" id="portfolio" href="../home.html#Portfolio">PORTFOLIO</a>
@@ -36,9 +36,9 @@
       </header>
     
         <div class="sidenav">
-              <a href="https://github.com/lmp-beep" target="blank"><img id="github" src="../assets/images/github.svg"></a>
+              <!-- <a href="https://github.com/lmp-beep" target="blank"><img id="github" src="../assets/images/github.svg"></a>
               <a href="https://www.linkedin.com/in/lisa-pessin/" target="blank"><img id="linkedin" src="../assets/images/linkedin.svg"></a>
-              <a href="https://lmp-beep.github.io/PhotographyPortfolio/" target="blank"><img id="photo" src="../assets/images/camera-fill.svg"></a>
+              <a href="https://lmp-beep.github.io/PhotographyPortfolio/" target="blank"><img id="photo" src="../assets/images/camera-fill.svg"></a> -->
               <a href="../html/newsflash.html"><img id="right-arrow" src="../assets/images/chevron-right.svg"></a>
               <a href="../html/atlVA.html"><img id="left-arrow" src="../assets/images/chevron-left.svg"></a>
               <a href="../home.html"><img id="grid" src="../assets/images/grid-3x3-gap-fill.svg"></a>
