added portfolio thumbnails

--- a/html/atlVA.html
+++ b/html/atlVA.html
@@ -51,7 +51,7 @@
         <div class="container">
           <style>
             .jumbotron {
-              background-image: url(../assets/images/portfolio/ExteriorBackHorizontal-WebSize.jpg);
+              background-image: url(../assets/images/portfolio/vaBanner.png);
               background-size: cover;
             }
           </style>
@@ -65,7 +65,11 @@
         <!-- <br>
         <button class="visit-button">VISIT WEBSITE</button> -->
 
-
+          <h2>Atlanta VA Medical Center</h2>
+          <h2>Medical Media Sharepoint</h2>
+          <ul>Technologies Used
+            <li>Sharepoint - Team Site</li>
+          </ul>
 
 
 
