--- a/html/myPhotos.html
+++ b/html/myPhotos.html
@@ -50,10 +50,10 @@
       <div class="jumbotron jumbotron-fluid">
         <div class="container">
           <h1 class="display-4"></h1>
-          <p class="lead">My Photography Portfolio</p>
+          <!-- <p class="lead">My Photography Portfolio</p> -->
           <style>
             .jumbotron {
-              background-image: url();
+              background-image: url(../assets/images/portfolio/myPhotosBanner.png);
               background-size: cover;
             }
           </style>
@@ -64,11 +64,21 @@
 
       <div class="body-info">
         <br>
-        <button class="visit-button">VISIT WEBSITE</button>
+        <a href="https://lmp-beep.github.io/PhotographyPortfolio/" target="blank"><button class="visit-button">VISIT WEBSITE</button></a>
+        <br>
+        <a href="https://github.com/lmp-beep/PhotographyPortfolio" target="blank"><button class="visit-button">VISIT GITHUB REPO</button></a>
+
+        <h2>Lisa Pessin Photography</h2>
+        <ul>Technologies Used
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>Bootstrap</li>
+        </ul>
       </div>
 
 
-
+     
 
 
 
