--- a/html/techBlog.html
+++ b/html/techBlog.html
@@ -39,8 +39,8 @@
               <!-- <a href="https://github.com/lmp-beep" target="blank"><img id="github" src="../assets/images/github.svg"></a>
               <a href="https://www.linkedin.com/in/lisa-pessin/" target="blank"><img id="linkedin" src="../assets/images/linkedin.svg"></a>
               <a href="https://lmp-beep.github.io/PhotographyPortfolio/" target="blank"><img id="photo" src="../assets/images/camera-fill.svg"></a> -->
-              <a href="../html/techBlog.html"><img id="right-arrow" src="../assets/images/chevron-right.svg"></a>
-              <a href="../html/myPhotos.html"><img id="left-arrow" src="../assets/images/chevron-left.svg"></a>
+              <a href=""><img id="right-arrow" src="../assets/images/chevron-right.svg"></a>
+              <a href="../html/newsflash.html"><img id="left-arrow" src="../assets/images/chevron-left.svg"></a>
               <a href="../home.html"><img id="grid" src="../assets/images/grid-3x3-gap-fill.svg"></a>
         </div>
 
@@ -50,10 +50,10 @@
       <div class="jumbotron jumbotron-fluid">
         <div class="container">
           <h1 class="display-4"></h1>
-          <!-- <p class="lead">Newsflash</p> -->
+          <!-- <p class="lead">Tech Blog</p> -->
           <style>
             .jumbotron {
-              background-image: url(../assets/images/portfolio/newsFlashBanner.png);
+              background-image: url(../assets/images/portfolio/techBlogBanner.png);
               background-size: cover;
             }
           </style>
@@ -64,20 +64,25 @@
 
       <div class="body-info">
         <br>
-        <a href="https://lmp-beep.github.io/07-Project1-MyNews/" target="blank"><button class="visit-button">VISIT WEBSITE</button></a>
+        <a href="" target="blank"><button class="visit-button">VISIT WEBSITE on HEROKU</button></a>
         <br>
-        <a href="https://github.com/lmp-beep/07-Project1-MyNews" target="blank"><button class="visit-button">VISIT GITHUB REPO</button></a>
+        <a href="https://github.com/lmp-beep/14-TechBlog" target="blank"><button class="visit-button">VISIT GITHUB REPO</button></a>
 
-        <h2>News Flash</h2>
+        <h2>Tech Blog</h2>
         <ul>Technologies Used
           <li>HTML</li>
           <li>CSS</li>
           <li>JavaScript</li>
-          <li>JQuery</li>
           <li>Bootstrap</li>
-          <li>API/JSON</li>
+          <li>Node.js</li>
+          <li>MySQL</li>
+          <li>Express</li>
+          <li>Sequelize</li>
+          <li>Handlebars</li>
+          <li>Bcrypt</li>
         </ul>
       </div>
+
 
 
 
