--- a/html/template.html
+++ b/html/template.html
@@ -64,8 +64,19 @@
 
       <div class="body-info">
         <br>
-        <button class="visit-button">VISIT WEBSITE</button>
+        <a href="" target="blank"><button class="visit-button">VISIT WEBSITE</button></a>
+        <br>
+        <a href="" target="blank"><button class="visit-button">VISIT GITHUB REPO</button></a>
+
+        <h2>Tech Blog</h2>
+        <ul>Technologies Used
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>Bootstrap</li>
+        </ul>
       </div>
+
 
 
 
