added new portfolio pages

--- a/html/newsflash.html
+++ b/html/newsflash.html
@@ -39,8 +39,8 @@
               <!-- <a href="https://github.com/lmp-beep" target="blank"><img id="github" src="../assets/images/github.svg"></a>
               <a href="https://www.linkedin.com/in/lisa-pessin/" target="blank"><img id="linkedin" src="../assets/images/linkedin.svg"></a>
               <a href="https://lmp-beep.github.io/PhotographyPortfolio/" target="blank"><img id="photo" src="../assets/images/camera-fill.svg"></a> -->
-              <a href="../html/techBlog.html"><img id="right-arrow" src="../assets/images/chevron-right.svg"></a>
-              <a href="../html/myPhotos.html"><img id="left-arrow" src="../assets/images/chevron-left.svg"></a>
+              <a href="../html/myPhotos.html"><img id="right-arrow" src="../assets/images/chevron-right.svg"></a>
+              <a href="../html/techBlog.html"><img id="left-arrow" src="../assets/images/chevron-left.svg"></a>
               <a href="../home.html"><img id="grid" src="../assets/images/grid-3x3-gap-fill.svg"></a>
         </div>
 
@@ -52,12 +52,9 @@
 
       
       <div class="body-info">
-
+      <br><br>
         <div>
-          <!-- <img class="header-text" src="../assets/images/portfolio/newsFlashSpot.png"></img> -->
         <img class="header-image" src="../assets/images/portfolio/newsFlashBanner4.png">
-
-        <!-- <span class="dot"></span> -->
       </div>
 
         <br><br>  
@@ -70,13 +67,10 @@
         <br>
 
         <div class="row">
-        <!-- <div class="col-8"> -->
         <p>News Flash is a news aggregator that uses Javascript Fetch to Request current news stories from the New York Times public API. The JSON Response is then extracted to provide the user with a photo, headline and abstract of each story. If the user clicks on the story card, they are taken to the full story at the News York Times website. The user can choose to read stories from US News, World News, Sports, Travel and Health. A carousel of the dominant story from each category is at the top of the page, while several smaller cards of other news stories fill the rest of the page.</p>
-      <!-- </div> -->
 
-      <!-- <div class="col-4"> -->
-        <p>Technologies Used:
-          <li>HTML</li>
+        <p>Technologies Used: HTML, CSS, Bootstrap, Javascript, JQuery, Fetch, API/JSON
+          <!-- <li>HTML</li>
           <li>|</li>
           <li>CSS</li>
           <li>|</li>
@@ -88,11 +82,11 @@
           <li>|</li>
           <li>Fetch</li>
           <li>|</li>
-          <li>API/JSON</li>
+          <li>API/JSON</li> -->
         </p>
-      <!-- </div> -->
     </div>
 
+      <br>
         <div>
           <img class="image-monitor" src="../assets/images/portfolio/newsFlashMonitor.png">
         </div>
