--- a/html/techBlog.html
+++ b/html/techBlog.html
@@ -39,52 +39,89 @@
               <!-- <a href="https://github.com/lmp-beep" target="blank"><img id="github" src="../assets/images/github.svg"></a>
               <a href="https://www.linkedin.com/in/lisa-pessin/" target="blank"><img id="linkedin" src="../assets/images/linkedin.svg"></a>
               <a href="https://lmp-beep.github.io/PhotographyPortfolio/" target="blank"><img id="photo" src="../assets/images/camera-fill.svg"></a> -->
-              <a href=""><img id="right-arrow" src="../assets/images/chevron-right.svg"></a>
-              <a href="../html/newsflash.html"><img id="left-arrow" src="../assets/images/chevron-left.svg"></a>
+              <a href="../html/newsflash.html"><img id="right-arrow" src="../assets/images/chevron-right.svg"></a>
+              <a href="../html/atlVA.html"><img id="left-arrow" src="../assets/images/chevron-left.svg"></a>
               <a href="../home.html"><img id="grid" src="../assets/images/grid-3x3-gap-fill.svg"></a>
         </div>
 
 
     <main>
 
-      <div class="jumbotron jumbotron-fluid">
+      <!-- <div class="jumbotron jumbotron-fluid">
         <div class="container">
-          <h1 class="display-4"></h1>
+          <h1 class="display-4"></h1> -->
           <!-- <p class="lead">Tech Blog</p> -->
-          <style>
+          <!-- <style>
             .jumbotron {
               background-image: url(../assets/images/portfolio/techBlogBanner.png);
               background-size: cover;
             }
           </style>
         </div>
-      </div>
+      </div> -->
 
 
 
       <div class="body-info">
-        <br>
-        <a href="" target="blank"><button class="visit-button">VISIT WEBSITE on HEROKU</button></a>
-        <br>
-        <a href="https://github.com/lmp-beep/14-TechBlog" target="blank"><button class="visit-button">VISIT GITHUB REPO</button></a>
+        <br><br>
 
-        <h2>Tech Blog</h2>
-        <ul>Technologies Used
+        <div>
+          <img class="header-image" src="../assets/images/portfolio/techBlogBanner.png">
+        </div>
+
+        <br><br>  
+
+        <div class="visit-btns">
+        <a href="https://lmp-beep.github.io/14-TechBlog/" target="blank"><button class="visit-button">VISIT WEBSITE</button></a>
+        <a href="https://github.com/lmp-beep/14-TechBlog" target="blank"><button class="visit-button">VISIT GITHUB REPO</button></a>
+      </div>
+
+      <br><br>  
+
+      <div class="row">
+        <p>Tech Blog description Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga voluptatibus beatae adipisci eligendi exercitationem dicta hic facere quibusdam, velit quia quaerat ipsam aspernatur maxime error corrupti enim a, eveniet nobis!</p>
+
+        <p>Technologies Used: HTML, CSS, Javascript, Bootstrap, Node.js, MySQL, Express, Sequelize, Handlebars, Bcrypt</p>
+        <br>
+        <br>
+        <br>
+        <!-- <p>
           <li>HTML</li>
+          <li>|</li>
           <li>CSS</li>
+          <li>|</li>
           <li>JavaScript</li>
+          <li>|</li>
           <li>Bootstrap</li>
+          <li>|</li>
           <li>Node.js</li>
+          <li>|</li>
           <li>MySQL</li>
+          <li>|</li>
           <li>Express</li>
+          <li>|</li>
           <li>Sequelize</li>
+          <li>|</li>
           <li>Handlebars</li>
+          <li>|</li>
           <li>Bcrypt</li>
-        </ul>
+        </p> -->
+      </div>
+
+
+      <div>
+        <img class="image-monitor" src="../assets/images/portfolio/techBlogMonitor.png">
+      </div>
+
+      <br><br>
+
+      <div>
+        <img class="image-screenshot" src="">
       </div>
 
 
 
+    </div>
 
 
 
