changed pngs to jpgs

--- a/html/newsflash.html
+++ b/html/newsflash.html
@@ -54,7 +54,7 @@
       <div class="body-info">
       <br><br>
         <div>
-        <img class="header-image" src="../assets/images/portfolio/newsFlashBanner4.png">
+        <img class="header-image" src="../assets/images/portfolio/newsFlashBanner4.jpg">
       </div>
 
         <br><br>  
@@ -69,32 +69,18 @@
         <div class="row">
         <p>News Flash is a news aggregator that uses Javascript Fetch to Request current news stories from the New York Times public API. The JSON Response is then extracted to provide the user with a photo, headline and abstract of each story. If the user clicks on the story card, they are taken to the full story at the News York Times website. The user can choose to read stories from US News, World News, Sports, Travel and Health. A carousel of the dominant story from each category is at the top of the page, while several smaller cards of other news stories fill the rest of the page.</p>
 
-        <p>Technologies Used: HTML, CSS, Bootstrap, Javascript, JQuery, Fetch, API/JSON
-          <!-- <li>HTML</li>
-          <li>|</li>
-          <li>CSS</li>
-          <li>|</li>
-          <li>Bootstrap</li>
-          <li>|</li>
-          <li>JavaScript</li>
-          <li>|</li>
-          <li>JQuery</li>
-          <li>|</li>
-          <li>Fetch</li>
-          <li>|</li>
-          <li>API/JSON</li> -->
-        </p>
+        <p>Technologies Used: HTML, CSS, Bootstrap, Javascript, JQuery, Fetch, API/JSON</p>
     </div>
 
       <br>
         <div>
-          <img class="image-monitor" src="../assets/images/portfolio/newsFlashMonitor.png">
+          <img class="image-monitor" src="../assets/images/portfolio/newsFlashMonitor.jpg">
         </div>
 
         <br><br>
 
         <div>
-          <img class="image-screenshot" src="../assets/images/portfolio/newsFlashScreenshot.png">
+          <img class="image-screenshot" src="../assets/images/portfolio/newsFlashScreenshot.jpg">
         </div>
 
 
