--- a/html/techBlog.html
+++ b/html/techBlog.html
@@ -36,9 +36,6 @@
       </header>
     
         <div class="sidenav">
-              <!-- <a href="https://github.com/lmp-beep" target="blank"><img id="github" src="../assets/images/github.svg"></a>
-              <a href="https://www.linkedin.com/in/lisa-pessin/" target="blank"><img id="linkedin" src="../assets/images/linkedin.svg"></a>
-              <a href="https://lmp-beep.github.io/PhotographyPortfolio/" target="blank"><img id="photo" src="../assets/images/camera-fill.svg"></a> -->
               <a href="../html/newsflash.html"><img id="right-arrow" src="../assets/images/chevron-right.svg"></a>
               <a href="../html/atlVA.html"><img id="left-arrow" src="../assets/images/chevron-left.svg"></a>
               <a href="../home.html"><img id="grid" src="../assets/images/grid-3x3-gap-fill.svg"></a>
@@ -47,26 +44,11 @@
 
     <main>
 
-      <!-- <div class="jumbotron jumbotron-fluid">
-        <div class="container">
-          <h1 class="display-4"></h1> -->
-          <!-- <p class="lead">Tech Blog</p> -->
-          <!-- <style>
-            .jumbotron {
-              background-image: url(../assets/images/portfolio/techBlogBanner.png);
-              background-size: cover;
-            }
-          </style>
-        </div>
-      </div> -->
-
-
-
       <div class="body-info">
         <br><br>
 
         <div>
-          <img class="header-image" src="../assets/images/portfolio/techBlogBanner.png">
+          <img class="header-image" src="../assets/images/portfolio/techBlogBanner.jpg">
         </div>
 
         <br><br>  
@@ -85,32 +67,11 @@
         <br>
         <br>
         <br>
-        <!-- <p>
-          <li>HTML</li>
-          <li>|</li>
-          <li>CSS</li>
-          <li>|</li>
-          <li>JavaScript</li>
-          <li>|</li>
-          <li>Bootstrap</li>
-          <li>|</li>
-          <li>Node.js</li>
-          <li>|</li>
-          <li>MySQL</li>
-          <li>|</li>
-          <li>Express</li>
-          <li>|</li>
-          <li>Sequelize</li>
-          <li>|</li>
-          <li>Handlebars</li>
-          <li>|</li>
-          <li>Bcrypt</li>
-        </p> -->
       </div>
 
 
       <div>
-        <img class="image-monitor" src="../assets/images/portfolio/techBlogMonitor.png">
+        <img class="image-monitor" src="../assets/images/portfolio/techBlogMonitor.jpg">
       </div>
 
       <br><br>
