--- a/html/atlVA.html
+++ b/html/atlVA.html
@@ -36,9 +36,6 @@
       </header>
     
         <div class="sidenav">
-              <!-- <a href="https://github.com/lmp-beep" target="blank"><img id="github" src="../assets/images/github.svg"></a>
-              <a href="https://www.linkedin.com/in/lisa-pessin/" target="blank"><img id="linkedin" src="../assets/images/linkedin.svg"></a>
-              <a href="https://lmp-beep.github.io/PhotographyPortfolio/" target="blank"><img id="photo" src="../assets/images/camera-fill.svg"></a> -->
               <a href="../html/techBlog.html"><img id="right-arrow" src="../assets/images/chevron-right.svg"></a>
               <a href="../html/myPhotos.html"><img id="left-arrow" src="../assets/images/chevron-left.svg"></a>
               <a href="../home.html"><img id="grid" src="../assets/images/grid-3x3-gap-fill.svg"></a>
@@ -47,24 +44,11 @@
 
     <main>
 
-      <!-- <div class="jumbotron jumbotron-fluid">
-        <div class="container">
-          <style>
-            .jumbotron {
-              background-image: url(../assets/images/portfolio/vaBanner.png);
-              background-size: cover;
-            }
-          </style>
-        </div>
-      </div> -->
-
-
-
       <div class="body-info">
 
         <br><br> 
         <div>
-          <img class="header-image" src="../assets/images/portfolio/vaBanner.png">
+          <img class="header-image" src="../assets/images/portfolio/vaBanner.jpg">
         </div>
 
         <br><br>
@@ -78,7 +62,7 @@
         <br><br>
 
         <div>
-          <img class="image-monitor" src="../assets/images/portfolio/vaMonitor.png">
+          <img class="image-monitor" src="../assets/images/portfolio/vaMonitor.jpg">
         </div>
 
         <br><br>
@@ -102,7 +86,7 @@
         <br><br>
         
         <div>
-          <img class="image-screenshot" src="../assets/images/portfolio/vaClinicsScreenshot.png">
+          <img class="image-screenshot" src="../assets/images/portfolio/vaClinicsScreenshot.jpg">
         </div>
 
         <br><br>
