turned off unfinished pages

--- a/home.html
+++ b/home.html
@@ -59,12 +59,12 @@
                 </figcaption></a>      
             </figure>
 
-            <figure class="effect-bubba">
+            <!-- <figure class="effect-bubba">
               <img src="./assets/images/portfolio/myPhotos.jpg"/>
               <a href="./html/myPhotos.html"><figcaption>
                   <h2>LISA PESSIN PHOTOGRAPHY</h2>
                 </figcaption></a>      
-            </figure>
+            </figure> -->
 
             <figure class="effect-bubba">
               <img src="./assets/images/portfolio/vaBack.jpg" id="va-sharepoint"/>
@@ -73,12 +73,12 @@
                 </figcaption></a>    
             </figure>
 
-            <figure class="effect-bubba">
+            <!-- <figure class="effect-bubba">
               <img src="./assets/images/portfolio/placeholder.jpg"/>
               <a href="./html/techBlog.html"><figcaption>
                   <h2>TECH BLOG</h2>
                 </figcaption></a>      
-            </figure>
+            </figure> -->
 
           </div>
       
