updated portfolio arrow links

--- a/html/atlVA.html
+++ b/html/atlVA.html
@@ -36,8 +36,8 @@
       </header>
     
         <div class="sidenav">
-              <a href="../html/techBlog.html"><img id="right-arrow" src="../assets/images/chevron-right.svg"></a>
-              <a href="../html/myPhotos.html"><img id="left-arrow" src="../assets/images/chevron-left.svg"></a>
+              <a href="../html/newsflash.html"><img id="right-arrow" src="../assets/images/chevron-right.svg"></a>
+              <a href="../html/newsflash.html"><img id="left-arrow" src="../assets/images/chevron-left.svg"></a>
               <a href="../home.html"><img id="grid" src="../assets/images/grid-3x3-gap-fill.svg"></a>
         </div>
 
