--- a/html/newsflash.html
+++ b/html/newsflash.html
@@ -36,11 +36,8 @@
       </header>
     
         <div class="sidenav">
-              <!-- <a href="https://github.com/lmp-beep" target="blank"><img id="github" src="../assets/images/github.svg"></a>
-              <a href="https://www.linkedin.com/in/lisa-pessin/" target="blank"><img id="linkedin" src="../assets/images/linkedin.svg"></a>
-              <a href="https://lmp-beep.github.io/PhotographyPortfolio/" target="blank"><img id="photo" src="../assets/images/camera-fill.svg"></a> -->
-              <a href="../html/myPhotos.html"><img id="right-arrow" src="../assets/images/chevron-right.svg"></a>
-              <a href="../html/techBlog.html"><img id="left-arrow" src="../assets/images/chevron-left.svg"></a>
+              <a href="../html/atlVA.html"><img id="right-arrow" src="../assets/images/chevron-right.svg"></a>
+              <a href="../html/atlVA.html"><img id="left-arrow" src="../assets/images/chevron-left.svg"></a>
               <a href="../home.html"><img id="grid" src="../assets/images/grid-3x3-gap-fill.svg"></a>
         </div>
 
