added emailJS to contact form

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <img id="logo" src="assets/images/PinkLogo.png">
 
        <h2 id="enter" >
-        <a href="./home.html">enter</a>
+        <a href="./html/home.html">enter</a>
        </h2>
 
         <h1 class="shadow">
@@ -43,7 +43,7 @@
    
     <script src="https://use.fontawesome.com/18004f3ee2.js"></script>
 
-    <script src="./assets/js/homescript.js"></script>
+    <script src="./assets/js/script.js"></script>
 
 </body>
 </html>
