--- a/html/myPhotos.html
+++ b/html/myPhotos.html
@@ -27,9 +27,9 @@
           <a href="../index.html"><img class="myLogo" src="../assets/images/LPlogo.png"></a>
           <div class="navbar">
             <ul>
-              <a class="navbar" id="portfolio" href="../home.html#Portfolio">PORTFOLIO</a>
-              <a class="navbar" id="about" href="../home.html#About">ABOUT</a>
-              <a class="navbar" id="contact" href="../home.html#Contact">CONTACT</a>
+              <a class="navbar" id="portfolio" href="../html/home.html">PORTFOLIO</a>
+              <a class="navbar" id="about" href="../html/about.html">ABOUT</a>
+              <a class="navbar" id="contact" href="../html/contact.html">CONTACT</a>
             </ul>
           </div>
         </div>
@@ -38,7 +38,7 @@
         <div class="sidenav">
               <a href="../"><img id="right-arrow" src="../assets/images/chevron-right.svg"></a>
               <a href="../"><img id="left-arrow" src="../assets/images/chevron-left.svg"></a>
-              <a href="../home.html"><img id="grid" src="../assets/images/grid-3x3-gap-fill.svg"></a>
+              <a href="../html/home.html"><img id="grid" src="../assets/images/grid-3x3-gap-fill.svg"></a>
         </div>
 
 
@@ -107,8 +107,6 @@
 
 
     <script src="https://use.fontawesome.com/18004f3ee2.js"></script>
-
-    <script src="./assets/js/homescript.js"></script>
 
 </body>
 </html>
