--- a/html/home.html
+++ b/html/home.html
@@ -54,31 +54,38 @@
 
             <figure class="effect-bubba">
               <img src="../assets/images/portfolio/newsFlash.jpg"/>
-              <a href="../html/newsflash.html"><figcaption>
+              <a href="../html/portfolioNewsflash.html"><figcaption>
                   <h2>NEWS FLASH</h2>
                 </figcaption></a>      
             </figure>
 
-            <!-- <figure class="effect-bubba">
-              <img src="../assets/images/portfolio/myPhotos.jpg"/>
-              <a href="../html/myPhotos.html"><figcaption>
-                  <h2>LISA PESSIN PHOTOGRAPHY</h2>
-                </figcaption></a>      
-            </figure> -->
-
             <figure class="effect-bubba">
               <img src="../assets/images/portfolio/vaBack.jpg" id="va-sharepoint"/>
-              <a href="../html/atlVA.html"><figcaption>
+              <a href="../html/portfolioVA.html"><figcaption>
                   <h2>MEDICAL MEDIA SHAREPOINT</h2>
                 </figcaption></a>    
             </figure>
 
-            <!-- <figure class="effect-bubba">
-              <img src="../assets/images/portfolio/placeholder.jpg"/>
-              <a href="../html/techBlog.html"><figcaption>
-                  <h2>TECH BLOG</h2>
+            <figure class="effect-bubba">
+              <img src="../assets/images/portfolio/myPhotos.jpg"/>
+              <a href="../html/portfolioMyPhotos.html"><figcaption>
+                  <h2>LISA PESSIN PHOTOGRAPHY</h2>
                 </figcaption></a>      
-            </figure> -->
+            </figure>
+
+            <figure class="effect-bubba">
+              <img src="../assets/images/portfolio/fitnessTracker.jpg"/>
+              <a href="../html/portfolioFitnessTracker.html"><figcaption>
+                  <h2>FITNESS <br>TRACKER</h2>
+                </figcaption></a>      
+            </figure>
+
+            <figure class="effect-bubba">
+              <img src="../assets/images/portfolio/bookSearch.jpg"/>
+              <a href="../html/portfolioBookSearch.html"><figcaption>
+                  <h2>BOOK SEARCH</h2>
+                </figcaption></a>      
+            </figure>
 
           </div>
     
