--- a/html/portfolioFitnessTracker.html
+++ b/html/portfolioFitnessTracker.html
@@ -36,8 +36,8 @@
       </header>
     
         <div class="sidenav">
-              <a href="../html/atlVA.html"><img id="right-arrow" src="../assets/images/chevron-right.svg"></a>
-              <a href="../html/atlVA.html"><img id="left-arrow" src="../assets/images/chevron-left.svg"></a>
+              <a href="../html/portfolioBookSearch.html"><img id="right-arrow" src="../assets/images/chevron-right.svg"></a>
+              <a href="../html/portfolioMyPhotos.html"><img id="left-arrow" src="../assets/images/chevron-left.svg"></a>
               <a href="../html/home.html"><img id="grid" src="../assets/images/grid-3x3-gap-fill.svg"></a>
         </div>
 
@@ -51,34 +51,46 @@
       <div class="body-info">
       <br><br>
         <div>
-        <img class="header-image" src="../assets/images/portfolio/newsFlashBanner4.jpg">
+        <img class="header-image" src="../assets/images/portfolio/fitnessTrackerBanner.jpg">
       </div>
 
         <br><br>  
 
         <div class="visit-btns">
-          <a href="https://lmp-beep.github.io/07-Project1-MyNews/" target="blank"><button class="visit-button">VISIT WEBSITE</button></a>
-          <a href="https://github.com/lmp-beep/07-Project1-MyNews" target="blank"><button class="visit-button">VISIT GITHUB REPO</button></a>
+          <a href="https://lmp-fitness-tracker.herokuapp.com/" target="blank"><button class="visit-button">VISIT WEBSITE</button></a>
+          <a href="https://github.com/lmp-beep/18-FitnessTracker" target="blank"><button class="visit-button">VISIT GITHUB REPO</button></a>
         </div>
 
         <br>
 
         <div class="row">
-        <p>News Flash is a news aggregator that uses Javascript Fetch to Request current news stories from the New York Times public API. The JSON Response is then extracted to provide the user with a photo, headline and abstract of each story. If the user clicks on the story card, they are taken to the full story at the News York Times website. The user can choose to read stories from US News, World News, Sports, Travel and Health. A carousel of the dominant story from each category is at the top of the page, while several smaller cards of other news stories fill the rest of the page.</p>
+        <p>This Fitness Tracker App uses Express, Mongoose and MongoDB Atlas to create and track daily workouts. The user can enter weight, sets, reps and duration for resistance exercises, and enter distance and duration for cardio exercises. The user can then access the combined weight of multiple exercises, and the total duration of each workout, for the past seven days in convenient charts on the Dashboard page.</p>
 
-        <p>Technologies Used: HTML, CSS, Bootstrap, Javascript, JQuery, Fetch, API/JSON</p>
+        <p>Technologies Used: Express, MongoDB, Atlas, Mongoose, Node, HTML, CSS, JavaScript, Heroku</p>
     </div>
 
       <br>
         <div>
-          <img class="image-monitor" src="../assets/images/portfolio/newsFlashMonitor.jpg">
+          <img class="image-monitor" src="../assets/images/portfolio/fitnessTrackerMonitor.jpg">
         </div>
 
         <br><br>
 
         <div>
-          <img class="image-screenshot" src="../assets/images/portfolio/newsFlashScreenshot.jpg">
+          <img class="image-screenshot" src="../assets/images/portfolio/fitnessTrackerScreenshot1.jpg">
         </div>
+
+        <br><br>
+
+        <div>
+            <img class="image-screenshot" src="../assets/images/portfolio/fitnessTrackerScreenshot2.jpg">
+          </div>
+
+          <br><br>
+
+          <div>
+            <img class="image-screenshot" src="../assets/images/portfolio/fitnessTrackerScreenshot3.jpg">
+          </div>
 
 
 
