--- a/html/about.html
+++ b/html/about.html
@@ -30,18 +30,18 @@
         <ul>
             <a class="navbar" id="portfolio" href="./home.html">PORTFOLIO</a>
             <a class="navbar" id="about" href="./about.html">ABOUT</a>
-            <a class="navbar" id="contact" href="./contact.html">CONTACT</a>
+            <!-- <a class="navbar" id="contact" href="./contact.html">CONTACT</a> -->
         </ul>
       </div>
     </div>
   </header>
 
     
-    <div class="sidenav">
+    <!-- <div class="sidenav">
           <a href="https://github.com/lmp-beep" target="blank"><img id="github" src="../assets/images/github.svg"></a>
           <a href="https://www.linkedin.com/in/lisa-pessin/" target="blank"><img id="linkedin" src="../assets/images/linkedin.svg"></a>
           <a href="https://lmp-beep.github.io/PhotographyPortfolio/" target="blank"><img id="photo" src="../assets/images/camera-fill.svg"></a>
-    </div>
+    </div> -->
     
 
 
@@ -68,7 +68,7 @@
                 dynamic front-end user experiences.
             </p> 
             <p class="bio">
-                Knowledge of: CSS, HTML, JavaScript, Bootstrap, API/JSON, MongoDB, Express.js, React.js, Node.js, MySQL, Git, and Photoshop.
+                Knowledge of: HTML, CSS, JavaScript, Bootstrap, API/JSON, MERN Stack (MongoDB, Express, React, Node), Mongoose, Apollo Server, Atlas, MySQL, GraphQL, Git, GitHub, Heroku and Photoshop.
             </p>
         </div>
         <div class="about-me col-sm">
@@ -82,11 +82,16 @@
   </div>
 
 
-<footer class="footer mt-auto py-4">
-  <div>
-    <a class="footer-text" id="copyright">COPYRIGHT © LISA PESSIN 2021</a>
-  </div>
-</footer>
+  <footer class="footer mt-auto py-4">
+    <div>
+      <div class="bottom-nav">
+      <a href="https://github.com/lmp-beep" target="blank"><img id="github" src="../assets/images/github.svg"></a>
+      <a href="https://www.linkedin.com/in/lisa-pessin/" target="blank"><img id="linkedin" src="../assets/images/linkedin.svg"></a>
+      <a href="https://lmp-beep.github.io/PhotographyPortfolio/" target="blank"><img id="photo" src="../assets/images/camera-fill.svg"></a>
+    </div>
+    <p class="footer-text" id="copyright">COPYRIGHT © LISA PESSIN 2021</p>
+    </div>
+  </footer>
 
 
 
