--- a/html/portfolioNewsflash.html
+++ b/html/portfolioNewsflash.html
@@ -29,7 +29,7 @@
             <ul>
               <a class="navbar" id="portfolio" href="../html/home.html">PORTFOLIO</a>
               <a class="navbar" id="about" href="../html/about.html">ABOUT</a>
-              <a class="navbar" id="contact" href="../html/contact.html">CONTACT</a>
+              <!-- <a class="navbar" id="contact" href="../html/contact.html">CONTACT</a> -->
             </ul>
           </div>
         </div>
