--- a/html/home.html
+++ b/html/home.html
@@ -99,7 +99,7 @@
     <div class="bottom-nav">
     <a href="https://github.com/lmp-beep" target="blank"><img id="github" src="../assets/images/github.svg"></a>
     <a href="https://www.linkedin.com/in/lisa-pessin/" target="blank"><img id="linkedin" src="../assets/images/linkedin.svg"></a>
-    <a href="https://lmp-beep.github.io/PhotographyPortfolio/" target="blank"><img id="photo" src="../assets/images/camera-fill.svg"></a>
+    <a href="https://lisapessin.com//" target="blank"><img id="photo" src="../assets/images/camera-fill.svg"></a>
   </div>
   <p class="footer-text" id="copyright">COPYRIGHT © LISA PESSIN 2021</p>
   </div>
