--- a/html/portfolioMyPhotos.html
+++ b/html/portfolioMyPhotos.html
@@ -53,7 +53,7 @@
             <br><br>  
     
             <div class="visit-btns">
-              <a href="https://lmp-beep.github.io/PhotographyPortfolio/" target="blank"><button class="visit-button">VISIT WEBSITE</button></a>
+              <a href="https://lisapessin.com/" target="blank"><button class="visit-button">VISIT WEBSITE</button></a>
               <a href="https://github.com/lmp-beep/PhotographyPortfolio" target="blank"><button class="visit-button">VISIT GITHUB REPO</button></a>
             </div>
     
